2016-10-28  Niels Grewe <niels.grewe@halbordnung.de>

  * Source/NSObject.m: Re-enable fast-ARC mode when memory layout
	and atomic operations support permit. This changes the size of the
	field where the reference count is stored to the size of a pointer
	in some configurations.
	The effective maximum reference count is still 2^24 - 1.

2016-10-27  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSObject.m: Comment out _ARCCompliantRetainRelease for
	now because the retain count representation in gnustep-base and
	libobjc2 differs causing space leaks on 64-bit architectures.

2016-10-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: Only atempt to read regular files into NSData,
	* Source/NSMessagePortNameServer.m: Ignore lock directories in the
	'names' directory.
	* Source/NSTask.m Increase files to close from 256 to 2048 to better
	reflect typical modern system limits.
	All changes for problems spotted by Wolfgang.

2016-10-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSDate.h: Add documentation
	* Source/NSDate.m: Tidy up and remove a little redundant code.
	* Source/NSRunLoop.m: Tidy up and empty autorelease pool more often.
	* Source/NSTimer.m: Tidy a little and improvde -description

2016-10-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/GSTLS.h:
	* Source/GSTLS.m:
	Fix for double free issues when assigning certificat/key to
	credentials fails.

2016-10-12  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSRegularExpression.m: Fix crashes in libicu due to
        * ignored error codes. Also fix a few memory leaks.
	* Tests/base/NSRegularExpression/basic.m: Test cases for this.

2016-10-11  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSTLS.m
	* configure.ac
	* Headers/GNUstepBase/config.h.in:
	Check for gnutls_x509_privkey_import2() and use it if
	available.
	* configure: Regenerate
	* Tests/base/GSTLS:
	Test case for loading an OpenSSL encrypted private key.
